--- a/.github/workflows/release-obs.yml
+++ b/.github/workflows/release-obs.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install cargo-obs-build
         uses: baptiste0928/cargo-install@v3
@@ -31,21 +31,12 @@ jobs:
 
       - name: Create GitHub Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: obs-build-${{ github.event.inputs.obs_version }}
-          release_name: OBS Build ${{ github.event.inputs.obs_version }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: obs-build-${{ github.event.inputs.obs_version }}
+          name: OBS Build ${{ github.event.inputs.obs_version }}
+          makeLatest: true
           draft: false
           prerelease: false
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./obs-build.7z
-          asset_name: obs-build.7z
-          asset_content_type: application/x-7z-compressed
+          artifacts: obs-build.7z
