--- a/.github/workflows/check-releases.yml
+++ b/.github/workflows/check-releases.yml
@@ -17,20 +17,35 @@ jobs:
         id: get_release
         run: |
           latest_release=$(curl -s https://api.github.com/repos/obsproject/obs-studio/releases/latest | jq -r .tag_name)
-          echo "::set-output name=latest_release::$latest_release"
+          echo "latest_release=$latest_release" >> $GITHUB_ENV
 
       - name: Check if new release
         id: check_release
         run: |
-          echo "Latest release is ${{ steps.get_release.outputs.latest_release }}"
-          if [ "${{ steps.get_release.outputs.latest_release }}" != "$(cat .latest_release)" ]; then
+          echo "Latest release is ${{ env.latest_release }}"
+          if [ "${{ env.latest_release }}" != "$(cat .latest_release)" ]; then
             echo "New release found"
-            echo "::set-output name=new_release::true"
+            echo "new_release=true" >> $GITHUB_ENV
           else
             echo "No new release"
-            echo "::set-output name=new_release::false"
-          fi
+            echo "new_release=false" >> $GITHUB_ENV
 
       - name: Save latest release
-        if: steps.check_release.outputs.new_release == 'true'
-        run: echo "${{ steps.get_release.outputs.latest_release }}" > .latest_release
+        if: env.new_release == 'true'
+        run: echo "${{ env.latest_release }}" > .latest_release
+
+      - name: Trigger build-obs workflow
+        if: env.new_release == 'true'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const latest_release = require("fs").readFileSync(".latest_release", "utf8").trim();
+            github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'release-obs.yml',
+              ref: context.ref,
+              inputs: {
+                obs_version: latest_release
+              }
+            })
