--- a/.github/workflows/check-releases.yml
+++ b/.github/workflows/check-releases.yml
@@ -37,18 +37,8 @@ jobs:
 
       - name: Trigger build-obs workflow
         if: env.new_release == 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const latest_release = require("fs").readFileSync(".latest_release", "utf8").trim();
-            github.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: 'release-obs.yml',
-              ref: context.ref,
-              inputs: {
-                obs_version: latest_release
-              }
-            })
-        env:
-          GITHUB_TOKEN: ${{ secrets.DISPATCH_KEY }}
+        run: |
+          curl -L -X POST -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.DISPATCH_KEY }}" \
+          https://api.github.com/repos/sshcrack/obs-builds-clipture/actions/workflows/release-obs.yml/dispatches \
+          -d '{"ref": "master", "inputs": {"obs_version":"${{ env.latest_release }}"}}'
