--- a/.github/workflows/release-obs.yml
+++ b/.github/workflows/release-obs.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Compress output directory
         run: |
           cd out
-          7z a -t7z -mx=9 ../obs-build.7z .
+          7z a -t7z -m0=lzma -mx=9 ../obs-build.7z .
           cd ..
 
       - name: Generate SHA-256 hash
