--- a/.github/workflows/release-obs.yml
+++ b/.github/workflows/release-obs.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Compress output directory
         run: |
           cd out
-          7z a -tlzma -mx=9 ../obs-build.lzma .
+          7z a -tzip -m0=lzma -mx=9 ../obs-build.zip .
           cd ..
 
       - name: Generate SHA-256 hash
         run: |
-          certutil -hashfile obs-build.lzma SHA256 | findstr /v "SHA256" | findstr /v "CertUtil" > obs-build.sha256
+          certutil -hashfile obs-build.zip SHA256 | findstr /v "SHA256" | findstr /v "CertUtil" > obs-build.sha256
 
       - name: Create GitHub Release
         id: create_release
@@ -49,6 +49,6 @@ jobs:
           draft: false
           prerelease: false
           artifacts: |
-            obs-build.lzma
+            obs-build.zip
             obs-build.sha256
-          artifactContentType: application/x-lzma
+          artifactContentType: application/zip
