--- a/.github/workflows/check-releases.yml
+++ b/.github/workflows/check-releases.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Cache latest release
         id: cache_latest_release
-        uses: actions/cache@v3
+        uses: actions/cache/restore@v4
         with:
           path: .latest_release
           key: latest-release
@@ -56,7 +56,7 @@ jobs:
 
       - name: Update cache
         if: env.new_release == 'true'
-        uses: actions/cache@v3
+        uses: actions/cache/save@v4
         with:
           path: .latest_release
           key: latest-release
