--- a/.github/workflows/check-releases.yml
+++ b/.github/workflows/check-releases.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "0 0 * * *" # Runs every day
+permissions:
+  contents: write
 
 jobs:
   check-releases:
